--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 
-# Created by https://www.gitignore.io/api/phpstorm,wordpress,visualstudiocode
-# Edit at https://www.gitignore.io/?templates=phpstorm,wordpress,visualstudiocode
+# Created by https://www.gitignore.io/api/wordpress,phpstorm+all,visualstudiocode
+# Edit at https://www.gitignore.io/?templates=wordpress,phpstorm+all,visualstudiocode
 
-### PhpStorm ###
+### PhpStorm+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
@@ -72,23 +72,21 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
-### PhpStorm Patch ###
-# Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
+### PhpStorm+all Patch ###
+# Ignores the whole .idea folder and all .iml files
+# See https://github.com/joeblau/gitignore.io/issues/186 and https://github.com/joeblau/gitignore.io/issues/360
 
-# *.iml
-# modules.xml
-# .idea/misc.xml
-# *.ipr
+.idea/
+
+# Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-249601023
+
+*.iml
+modules.xml
+.idea/misc.xml
+*.ipr
 
 # Sonarlint plugin
-.idea/**/sonarlint/
-
-# SonarQube Plugin
-.idea/**/sonarIssues.xml
-
-# Markdown Navigator plugin
-.idea/**/markdown-navigator.xml
-.idea/**/markdown-navigator/
+.idea/sonarlint
 
 ### VisualStudioCode ###
 .vscode/*
@@ -107,16 +105,19 @@ fabric.properties
 
 # ignore everything in the "wp-content" directory, except:
 # "mu-plugins", "plugins", "themes" directory
-wp-*
-index*
-xml*
-lice*
-wp-admin/*
-wp-includes/*
-wp-content/*
-!wp-content/mu-plugins/
+license.txt
+readme.html
+index.php
+xmlrpc.php
+#wp-*
+#wp-content/*
+wp-content/languages/*
+wp-content/mu-plugins/
+!wp-content/plugins/wp-next-plugin/*
 !wp-content/plugins/
 !wp-content/themes/
+wp-admin/*
+wp-includes/*
 
 # ignore these plugins
 wp-content/plugins/hello.php
@@ -132,6 +133,21 @@ node_modules/
 *.sql
 *.sqlite
 
-# End of https://www.gitignore.io/api/phpstorm,wordpress,visualstudiocode
-
-wordpress-*
+# End of https://www.gitignore.io/api/wordpress,phpstorm+all,visualstudiocode
+/wp-content/plugins/akismet/
+/wp-activate.php
+/wp-blog-header.php
+/wp-comments-post.php
+/wp-config.php
+/wp-config-sample.php
+/wp-cron.php
+/wp-links-opml.php
+/wp-load.php
+/wp-login.php
+/wp-mail.php
+/wp-settings.php
+/wp-signup.php
+/wp-trackback.php
+/wp-content/upgrade/
+/wp-content/uploads/
+/wp-content/plugins/wp-next-plugin/
