13 - Create dynamic page by plugin

--- a/.gitignore
+++ b/.gitignore
@@ -156,3 +156,4 @@ node_modules/
 /wp-content/plugins/plugin-inspector/
 /wp-content/plugins/query-monitor/
 /wp-content/plugins/simply-show-hooks/
+/wp-content/plugins/classic-editor/
